[tool.poetry]
name = "kava_plugin"
version = "0.1.0"
description = "plugin for kava"
authors = ["ca3-caaip"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
web3 = "^5.28.0"
pandas = "^1.4.1"
senkalib = {git = 'https://github.com/regonn/senkalib.git', rev = '8c8c7d5e5b6f1e71f0faa141f6c142a9836b8498' }
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
pyright = "^1.1.227"
black = "^22.1.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"