[tool.poetry]
name = "kava_plugin"
version = "0.1.0"
description = "plugin for kava"
authors = ["ca3-caaip"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
senkalib = {git = 'https://github.com/ca3-caaip/senkalib.git', rev = '2d5ea9d3eb5d29d41aaef0dc8d793af48f53cc44' }
toml = "^0.10.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
pyright = "^1.1.227"
black = "^22.1.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"